--- a/Billed-app-FR-Front-main/netlify.toml
+++ b/Billed-app-FR-Front-main/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+  command = "echo 'No build necessary'" 
+  publish = "."
 
 [[redirects]]
   from = "/*"
